# itwinai-3dgan-plugin

./: .gitignore  AUTHORS.md  Dockerfile  README.md  config.yaml  create_inference_sample.py  pyproject.toml  slurm.jsc.sh  slurm.vega.sh
.github/workflows/: lint.yml
src/itwinai/plugins/tdgan/: create_inference_sample.py  trainer.py
